# multimodal-visual-inspection-api

./: .gitignore  api_contract.md  architecture.md  evaluation_plan.md  modeling_choices.md  pyproject.toml  readme.md  repo_structure.md  requirements.md
app/: config.py  logging.py  main.py
app/analyzers/: document_analyzer.py  vision_base.py  vision_factory.py  vision_resnet.py  vlm_base.py  vlm_document_analyzer.py  vlm_errors.py  vlm_factory.py  vlm_mock.py  vlm_parsing.py  vlm_prompting.py  vlm_runner.py  vlm_schema.py  vlm_transformers.py
app/api/: error_handlers.py  routes_document.py  routes_image.py  schemas_image.py
app/explainers/: grounded_explainer.py
app/llm/: llm_client.py  llm_factory.py  transformers_client.py
app/middleware/: request_id.py
app/observability/: logging.py  metrics.py  metrics_route.py
app/pipelines/: document_pipeline.py  image_pipeline.py
app/preprocessing/: document.py  image_preprocess.py
app/utils/: logging_filter.py  request_context.py  request_id.py
tests/analyzers/: test_vlm_document_analyzer.py
tests/api/: test_routes_document.py  test_routes_image_grounding.py
tests/explainers/: test_grounded_explainer.py  test_grounded_explainer_robustness.py
tests/integration/: test_endpoints_smoke.py
tests/pipelines/: test_document_pipeline.py
tests/preprocessing/: test_document.py  test_image_preprocess.py
tests/unit/: test_schemas_image.py
